crates/wac-parser/tests/resolution/fail/duplicate-resource-constructor.wac
resource x {
    constructor();
    constructor(x: u32);
}